--- a/index.css
+++ b/index.css
@@ -364,6 +364,7 @@ h3 {
 }
 
 @media only screen and (max-width: 768px) {
+  
   h1 {
     font-size: 2.5rem;
   }
@@ -497,7 +498,10 @@ h1 {
   text-align: center;
   margin-bottom: 20px;
 }
-
+.heading{
+  font-weight: bolder;
+  color: #117964;
+}
 
 
 .roller {
@@ -1274,7 +1278,7 @@ header .wrapper {
 .menu-items li{
     list-style: none;
     margin-left: 1.5rem;
-    font-size: 3rem;
+    font-size: 2.5rem;
     bottom: 10px;
 }
 
