--- a/index.css
+++ b/index.css
@@ -3,20 +3,28 @@
 
 
 
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
+/* Montserrat */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
 
-/* Droid Serif font */
-@import url('https://fonts.googleapis.com/css2?family=Droid+Serif&display=swap');
+/* Bebas Neue */
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
-/* Font styles */
+/* Oswald */
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap');
+
+/* Roboto */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
+
+/* Avenir Next */
+@import url('https://fonts.googleapis.com/css2?family=Avenir+Next:wght@700&display=swap');
+
+/* Applying the fonts */
 body {
-  font-family: 'Inter', sans-serif;
-  /* Default font for the body */
+    font-family: 'Montserrat', sans-serif; /* Change to the desired font family */
 }
 
 h1 {
-  font-family: 'Droid Serif', serif;
+  font-family: 'Droid Serif', serif,'Roboto';
   /* Font for heading elements */
 }
 
@@ -24,7 +32,6 @@ h1 {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Avenir';
 }
 
 :root {
@@ -42,7 +49,8 @@ html,
 body {
   margin: 0;
   height: 100%;
-  overflow-x: hidden
+  overflow-x: hidden;
+  min-height: 500vh;
 }
 
 ul {
@@ -62,11 +70,6 @@ button {
 }
 
 /* BASE STYLES */
-body {
-  background-color: #e8f0f7;
-  font-family: 'Inter', sans-serif;
-  min-height: 500vh;
-}
 
 /* NORMAL STYLES */
 .header {
@@ -1002,11 +1005,6 @@ header .wrapper {
   justify-content: space-between;
 }
 
-.nabar img {
-  height: 50px;
-  display: block;
-}
-
 .menu-bar button {
   border: 1px solid rgba(0, 0, 0, 0.1);
   background:
@@ -1268,6 +1266,7 @@ header .wrapper {
 .menu-items{
     order: 2;
     display: flex;
+    background: #fff;
 }
 .logo{
     order: 1;
@@ -1412,3 +1411,53 @@ header .wrapper {
 
 /*slide show*/
 
+#back {
+  position: relative;
+}
+
+#back::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.8) 100%);
+  pointer-events: none;
+}
+
+.navbar{
+  opacity:100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.button-container {
+  position: fixed;
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
+  display: flex;
+  align-items: center; /* Align button to the middle vertically */
+  z-index: 1000; /* Ensure the button is above other content */
+  margin-right: 1420px;
+}
+
+/* Style for the rotated button */
+.left-button {
+  padding: 10px 20px;
+  background-color: #a18766; /* Blue color, you can change it */
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
+  transform: rotate(-90deg);
+  transform-origin: center;
+}
+
+@media (max-width: 768px) {
+  .button-container {
+    margin-right:300px;
+  }
+}
