--- a/index.css
+++ b/index.css
@@ -20,11 +20,12 @@
 
 /* Applying the fonts */
 body {
-    font-family: 'Montserrat', sans-serif; /* Change to the desired font family */
+  font-family: 'Montserrat', sans-serif;
+  /* Change to the desired font family */
 }
 
 h1 {
-  font-family: 'Droid Serif', serif,'Roboto';
+  font-family: 'Droid Serif', serif, 'Roboto';
   /* Font for heading elements */
 }
 
@@ -367,7 +368,7 @@ h3 {
 }
 
 @media only screen and (max-width: 768px) {
-  
+
   h1 {
     font-size: 2.5rem;
   }
@@ -501,7 +502,8 @@ h1 {
   text-align: center;
   margin-bottom: 20px;
 }
-.heading{
+
+.heading {
   font-weight: bolder;
   color: #117964;
 }
@@ -1036,7 +1038,8 @@ header .wrapper {
   .menu-bar {
     display: none;
   }
-  .logo{
+
+  .logo {
     align-items: center;
   }
 }
@@ -1217,195 +1220,197 @@ header .wrapper {
     }
   }
 }
+
 *,
 *::after,
-*::before{
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
+*::before {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
-.html{
-    font-size: 62.5%;
+.html {
+  font-size: 62.5%;
 }
 
 .navbar input[type="checkbox"],
-.navbar .hamburger-lines{
-    display: none;
+.navbar .hamburger-lines {
+  display: none;
 }
 
-.container{
-    max-width: 1200px;
-    width: 90%;
-    margin: auto;
+.container {
+  max-width: 1200px;
+  width: 90%;
+  margin: auto;
 }
 
-.navbar{
-    /* box-shadow: 0px 5px 10px 0px #aaa; */
-    width: 100%;
-    background: #fff;
-    color: #000;
-    opacity: 0.85;
-    z-index: 100;
+.navbar {
+  /* box-shadow: 0px 5px 10px 0px #aaa; */
+  width: 100%;
+  background: #fff;
+  color: #000;
+  opacity: 0.85;
+  z-index: 100;
 }
 
-.navbar-container{
-    display: flex;
-    justify-content: space-between;
+.navbar-container {
+  display: flex;
+  justify-content: space-between;
+  height: 64px;
+  align-items: center;
+  opacity: 0.85;
+  top: 0;
+  left: 0;
+  right: 20px;
+  width: 100%;
+  z-index: 1000;
+  position: fixed;
+}
+
+.menu-items {
+  order: 2;
+  display: flex;
+  background: #fff;
+}
+
+.logo {
+  order: 1;
+  font-size: 2.3rem;
+}
+
+.menu-items li {
+  list-style: none;
+  margin-left: 1.5rem;
+  font-size: 2.5rem;
+  bottom: 10px;
+}
+
+.navbar a {
+  color: #444;
+  text-decoration: none;
+  font-weight: 500;
+  transition: color 0.3s ease-in-out;
+}
+
+.navbar a:hover {
+  color: #117964;
+}
+
+@media (max-width: 768px) {
+  .navbar {
+    opacity: 0.95;
+  }
+
+  .navbar-container input[type="checkbox"],
+  .navbar-container .hamburger-lines {
+    display: block;
+  }
+
+  .navbar-container {
+    display: block;
+    position: relative;
     height: 64px;
-    align-items: center;
-    opacity: 0.85;
-    top: 0;
-    left: 0;
-    right: 20px;
-    width: 100%;
-    z-index: 1000;
     position: fixed;
-}
+  }
 
-.menu-items{
-    order: 2;
+  .navbar-container input[type="checkbox"] {
+    position: absolute;
+    display: block;
+    height: 32px;
+    width: 30px;
+    top: 20px;
+    right: 20px;
+    z-index: 5;
+    opacity: 0;
+    cursor: pointer;
+  }
+
+  .navbar-container .hamburger-lines {
+    display: block;
+    height: 28px;
+    width: 35px;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    z-index: 2;
     display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .navbar-container .hamburger-lines .line {
+    display: block;
+    height: 4px;
+    width: 100%;
+    border-radius: 10px;
+    background: #333;
+  }
+
+  .navbar-container .hamburger-lines .line1 {
+    transform-origin: 0% 0%;
+    transition: transform 0.3s ease-in-out;
+  }
+
+  .navbar-container .hamburger-lines .line2 {
+    transition: transform 0.2s ease-in-out;
+  }
+
+  .navbar-container .hamburger-lines .line3 {
+    transform-origin: 0% 100%;
+    transition: transform 0.3s ease-in-out;
+  }
+
+  .navbar .menu-items {
+    padding-top: 100px;
     background: #fff;
-}
-.logo{
-    order: 1;
-    font-size: 2.3rem;
-}
+    height: 100vh;
+    max-width: 300px;
+    transform: translate(-150%);
+    display: flex;
+    flex-direction: column;
+    margin-left: -40px;
+    padding-left: 40px;
+    transition: transform 0.5s ease-in-out;
+    box-shadow: 5px 0px 10px 0px #aaa;
+    overflow: scroll;
+  }
 
-.menu-items li{
-    list-style: none;
-    margin-left: 1.5rem;
-    font-size: 2.5rem;
-    bottom: 10px;
-}
-
-.navbar a{
-    color: #444;
-    text-decoration: none;
+  .navbar .menu-items li {
+    margin-bottom: 1.8rem;
+    font-size: 3rem;
     font-weight: 500;
-    transition: color 0.3s ease-in-out;
-}
+  }
 
-.navbar a:hover{
-    color: #117964;
-}
+  .logo {
+    position: absolute;
+    top: 10px;
+    right: 18px;
+    font-size: 2.5rem;
+    bottom: 5px;
+  }
 
-@media (max-width: 768px){
-    .navbar{
-        opacity: 0.95;
-    }
+  .navbar-container input[type="checkbox"]:checked~.menu-items {
+    transform: translateX(0);
+  }
 
-    .navbar-container input[type="checkbox"],
-    .navbar-container .hamburger-lines{
-        display: block;
-    }
+  .navbar-container input[type="checkbox"]:checked~.hamburger-lines .line1 {
+    transform: rotate(45deg);
+  }
 
-    .navbar-container{
-        display: block;
-        position: relative;
-        height: 64px;
-        position: fixed;
-    }
+  .navbar-container input[type="checkbox"]:checked~.hamburger-lines .line2 {
+    transform: scaleY(0);
+  }
 
-    .navbar-container input[type="checkbox"]{
-        position: absolute;
-        display: block;
-        height: 32px;
-        width: 30px;
-        top: 20px;
-        right: 20px;
-        z-index: 5;
-        opacity: 0;
-        cursor: pointer;
-    }
-
-    .navbar-container .hamburger-lines{
-        display: block;
-        height: 28px;
-        width: 35px;
-        position: absolute;
-        top: 20px;
-        right: 20px;
-        z-index: 2;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-    }
-
-    .navbar-container .hamburger-lines .line{
-        display: block;
-        height: 4px;
-        width: 100%;
-        border-radius: 10px;
-        background: #333;
-    }
-    
-    .navbar-container .hamburger-lines .line1{
-        transform-origin: 0% 0%;
-        transition: transform 0.3s ease-in-out;
-    }
-
-    .navbar-container .hamburger-lines .line2{
-        transition: transform 0.2s ease-in-out;
-    }
-
-    .navbar-container .hamburger-lines .line3{
-        transform-origin: 0% 100%;
-        transition: transform 0.3s ease-in-out;
-    }
-
-    .navbar .menu-items{
-        padding-top: 100px;
-        background: #fff;
-        height: 100vh;
-        max-width: 300px;
-        transform: translate(-150%);
-        display: flex;
-        flex-direction: column;
-        margin-left: -40px;
-        padding-left: 40px;
-        transition: transform 0.5s ease-in-out;
-        box-shadow:  5px 0px 10px 0px #aaa;
-        overflow: scroll;
-    }
-
-    .navbar .menu-items li{
-        margin-bottom: 1.8rem;
-        font-size: 3rem;
-        font-weight: 500;
-    }
-
-    .logo{
-        position: absolute;
-        top: 10px;
-        right: 18px;
-        font-size: 2.5rem;
-        bottom: 5px;
-    }
-
-    .navbar-container input[type="checkbox"]:checked ~ .menu-items{
-        transform: translateX(0);
-    }
-
-    .navbar-container input[type="checkbox"]:checked ~ .hamburger-lines .line1{
-        transform: rotate(45deg);
-    }
-
-    .navbar-container input[type="checkbox"]:checked ~ .hamburger-lines .line2{
-        transform: scaleY(0);
-    }
-
-    .navbar-container input[type="checkbox"]:checked ~ .hamburger-lines .line3{
-        transform: rotate(-45deg);
-    }
+  .navbar-container input[type="checkbox"]:checked~.hamburger-lines .line3 {
+    transform: rotate(-45deg);
+  }
 
 }
 
-@media (max-width: 500px){
-    .navbar-container input[type="checkbox"]:checked ~ .logo{
-        display: none;
-    }
+@media (max-width: 500px) {
+  .navbar-container input[type="checkbox"]:checked~.logo {
+    display: none;
+  }
 }
 
 
@@ -1426,35 +1431,39 @@ header .wrapper {
   pointer-events: none;
 }
 
-.navbar{
-  opacity:100%;
+.navbar {
+  opacity: 100%;
   background-repeat: no-repeat;
   background-size: cover;
 }
+
 .button-container {
   position: fixed;
   top: 50%;
   right: 0;
   transform: translateY(-50%);
   z-index: 1000;
-  margin-right:20px;
+  margin-right: 20px;
 }
 
-.right-button:hover{
+.right-button:hover {
   background-color: var(--light-red);
 }
 
 .right-button {
   padding: 10px 20px;
-  background-color: #a18766; /* Button background color */
-  color: #fff; /* Button text color */
+  background-color: #a18766;
+  /* Button background color */
+  color: #fff;
+  /* Button text color */
   border: none;
   border-radius: 5px;
   font-size: 16px;
   cursor: pointer;
   transform: rotate(-90deg) translateX(100%);
   transform-origin: right center;
-  white-space: nowrap; /* Prevent text wrapping */
+  white-space: nowrap;
+  /* Prevent text wrapping */
 }
 
 @media screen and (max-width: 768px) {
@@ -1463,8 +1472,8 @@ header .wrapper {
     transform-origin: right bottom;
     margin-right: 20px;
   }
-  
-.right-button:hover{
-  background-color: var(--light-red);
-}
+
+  .right-button:hover {
+    background-color: var(--light-red);
+  }
 }
