--- a/index.css
+++ b/index.css
@@ -1564,3 +1564,50 @@ header .wrapper {
 		opacity: 0;
 	}
 }
+
+.about-us-container {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.about-us, .contact-info {
+  width: calc(50% - 10px);
+  max-width: 400px;
+}
+
+.about-us h2,.about-us h3 {
+  margin-top: 0;
+  color: #fff;
+  font-size: 24px;
+  border-bottom: 2px solid #333;
+  padding-bottom: 10px;
+}
+
+.about-us p {
+  margin-bottom: 10px;
+  color: #fff;
+  font-size: 16px;
+  line-height: 1.5;
+}
+
+.contact-info i {
+  margin-right: 5px;
+  color: #007bff;
+}
+
+@media only screen and (max-width: 600px) {
+  .about-us-container {
+      flex-direction: column;
+      align-items: center;
+  }
+
+  .about-us, .contact-info {
+      width: 100%;
+      text-align: center;
+      margin-bottom: 20px;
+  }
+}
